Botones subcategorías añadidos

--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -1,8 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".vista.MainActivity2"
-    />
+    >
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="155dp"
+        android:text="@string/puntos"
+        android:textSize="30sp"
+        android:textAlignment="center" />
+
+    <Button
+        android:id="@+id/geo"
+        android:layout_width="232dp"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/textView"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="48dp"
+        android:layout_marginEnd="131dp"
+        android:layout_marginBottom="-156dp"
+        android:text="@string/geopolitica"
+        android:backgroundTint="#003FFF"/>
+
+    <Button
+        android:id="@+id/ceincia"
+        android:layout_width="232dp"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/textView"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="48dp"
+        android:layout_marginEnd="131dp"
+        android:layout_marginBottom="-270dp"
+        android:backgroundTint="#00B500"
+        android:text="@string/ciencia" />
+    <Button
+        android:id="@+id/entretenimiento"
+        android:layout_width="232dp"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/textView"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="48dp"
+        android:layout_marginEnd="131dp"
+        android:layout_marginBottom="-384dp"
+        android:backgroundTint="#FF5C8D"
+        android:text="@string/entretenimiento" />
+
+</RelativeLayout>
