--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -9,7 +9,7 @@
     >
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/puntos"
         android:layout_width="match_parent"
         android:layout_height="155dp"
         android:text="@string/puntos"
@@ -20,20 +20,20 @@
         android:id="@+id/geo"
         android:layout_width="232dp"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textView"
+        android:layout_alignBottom="@+id/puntos"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="48dp"
         android:layout_marginEnd="131dp"
         android:layout_marginBottom="-156dp"
-        android:text="@string/geopolitica"
-        android:backgroundTint="#003FFF"/>
+        android:backgroundTint="#003FFF"
+        android:text="@string/geopolitica" />
 
     <Button
         android:id="@+id/ceincia"
         android:layout_width="232dp"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textView"
+        android:layout_alignBottom="@+id/puntos"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="48dp"
@@ -45,7 +45,7 @@
         android:id="@+id/entretenimiento"
         android:layout_width="232dp"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textView"
+        android:layout_alignBottom="@+id/puntos"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="48dp"
@@ -53,5 +53,51 @@
         android:layout_marginBottom="-384dp"
         android:backgroundTint="#FF5C8D"
         android:text="@string/entretenimiento" />
+
+    <androidx.gridlayout.widget.GridLayout
+        android:id="@+id/geop"
+        android:layout_width="234dp"
+        android:layout_height="53dp"
+        android:layout_alignBottom="@+id/puntos"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="46dp"
+        android:layout_marginEnd="131dp"
+        android:layout_marginBottom="-215dp"
+        app:rowCount="1"
+        app:columnCount="2"
+        >
+
+    </androidx.gridlayout.widget.GridLayout>
+
+    <androidx.gridlayout.widget.GridLayout
+        android:id="@+id/cienc"
+        android:layout_width="327dp"
+        android:layout_height="55dp"
+        android:layout_alignBottom="@+id/puntos"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="46dp"
+        android:layout_marginEnd="47dp"
+        android:layout_marginBottom="-331dp"
+        app:rowCount="1"
+        app:columnCount="3">
+
+    </androidx.gridlayout.widget.GridLayout>
+
+    <androidx.gridlayout.widget.GridLayout
+        android:id="@+id/entr"
+        android:layout_width="385dp"
+        android:layout_height="66dp"
+        android:layout_alignBottom="@+id/puntos"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="46dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="-458dp"
+        app:rowCount="1"
+        app:columnCount="5">
+
+    </androidx.gridlayout.widget.GridLayout>
 
 </RelativeLayout>
