--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -56,17 +56,16 @@
 
     <androidx.gridlayout.widget.GridLayout
         android:id="@+id/geop"
-        android:layout_width="234dp"
-        android:layout_height="53dp"
+        android:layout_width="wrap_content"
+        android:layout_height="72dp"
         android:layout_alignBottom="@+id/puntos"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="46dp"
-        android:layout_marginEnd="131dp"
-        android:layout_marginBottom="-215dp"
-        app:rowCount="1"
+        android:layout_marginEnd="13dp"
+        android:layout_marginBottom="-223dp"
         app:columnCount="2"
-        >
+        app:rowCount="1">
 
     </androidx.gridlayout.widget.GridLayout>
 
@@ -80,8 +79,8 @@
         android:layout_marginStart="46dp"
         android:layout_marginEnd="47dp"
         android:layout_marginBottom="-331dp"
-        app:rowCount="1"
-        app:columnCount="3">
+        app:columnCount="3"
+        app:rowCount="1">
 
     </androidx.gridlayout.widget.GridLayout>
 
