--- a/app/src/main/res/layout/respondeme.xml
+++ b/app/src/main/res/layout/respondeme.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,9 +10,10 @@
         android:layout_width="match_parent"
         android:layout_height="159dp"
         android:background="@drawable/textshape"
-        android:text="TextView"
+        android:textSize="20sp"
         android:textAlignment="center"
-        android:textColor="#000000" />
+        android:textColor="#000000"
+        />
 
     <TextView
         android:id="@+id/respuesta0"
@@ -26,10 +26,10 @@
         android:layout_marginTop="70dp"
         android:layout_marginEnd="60dp"
         android:background="@drawable/buttonshape"
-        android:text="TextView"
         android:textColor="#000000"
         android:textColorHighlight="#000000"
-        android:textAlignment="center"/>
+        android:textAlignment="center"
+      />
 
     <TextView
         android:id="@+id/respuesta1"
@@ -42,7 +42,6 @@
         android:layout_marginTop="170dp"
         android:layout_marginEnd="60dp"
         android:background="@drawable/buttonshape"
-        android:text="TextView"
         android:textColor="#000000"
         android:textColorHighlight="#000000"
         android:textAlignment="center"/>
@@ -58,7 +57,6 @@
         android:layout_marginTop="270dp"
         android:layout_marginEnd="60dp"
         android:background="@drawable/buttonshape"
-        android:text="TextView"
         android:textColor="#000000"
         android:textColorHighlight="#000000"
         android:textAlignment="center"/>
@@ -74,7 +72,6 @@
         android:layout_marginTop="370dp"
         android:layout_marginEnd="60dp"
         android:background="@drawable/buttonshape"
-        android:text="TextView"
         android:textColor="#000000"
         android:textColorHighlight="#000000"
         android:textAlignment="center"/>
