--- a/app/src/main/res/layout/respondeme.xml
+++ b/app/src/main/res/layout/respondeme.xml
@@ -7,16 +7,18 @@
     tools:context=".vista.Respondeme">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="353dp"
-        android:layout_height="wrap_content"
+        android:id="@+id/botonesPoten"
+        android:layout_width="wrap_content"
+        android:layout_height="90dp"
         android:layout_below="@+id/pregunta"
         android:layout_alignBottom="@+id/respuesta3"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="464dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="-92dp" />
+        android:layout_marginStart="29dp"
+        android:layout_marginTop="433dp"
+        android:layout_marginEnd="28dp"
+        android:layout_marginBottom="-103dp"
+        android:orientation="horizontal" />
 
     <TextView
         android:id="@+id/pregunta"
