--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,4 +37,18 @@
         android:layout_marginBottom="-170dp"
         android:text="@string/tienda"
         android:backgroundTint="#17500F"/>
+
+    <TextView
+        android:id="@+id/monedos"
+        android:layout_width="161dp"
+        android:layout_height="37dp"
+        android:layout_alignBottom="@+id/imageView2"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="246dp"
+        android:layout_marginTop="78dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="-39dp"
+        android:textColor="#FFFF00" />
 </RelativeLayout>
