--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,4 +51,22 @@
         android:layout_marginEnd="4dp"
         android:layout_marginBottom="-39dp"
         android:textColor="#FFFF00" />
+
+    <com.google.android.material.switchmaterial.SwitchMaterial
+        android:id="@+id/mute"
+        android:layout_width="196dp"
+        android:layout_height="40dp"
+        android:layout_alignBottom="@+id/imageView2"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="77dp"
+        android:layout_marginEnd="174dp"
+        android:layout_marginBottom="-40dp"
+        android:minHeight="48dp"
+        android:text="@string/mute"
+        android:textColor="#FFFFFF"
+        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />
+
 </RelativeLayout>
