--- a/app/src/main/res/layout/layout_casino.xml
+++ b/app/src/main/res/layout/layout_casino.xml
@@ -26,4 +26,18 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/button22"
+        android:layout_width="178dp"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/button"
+        android:layout_alignTop="@+id/button"
+        android:layout_alignEnd="@+id/button"
+        android:layout_alignBottom="@+id/button"
+        android:layout_marginStart="-57dp"
+        android:layout_marginTop="181dp"
+        android:layout_marginEnd="7dp"
+        android:layout_marginBottom="-173dp"
+        android:text="Ahorcado" />
 </RelativeLayout>
