--- a/app/src/main/res/layout/layout_casino.xml
+++ b/app/src/main/res/layout/layout_casino.xml
@@ -1,43 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".vista.casino.Casino">
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="129dp"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/textView"
-        android:layout_alignBottom="@+id/textView"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="132dp"
-        android:layout_marginTop="256dp"
-        android:layout_marginEnd="-261dp"
-        android:layout_marginBottom="-293dp"
-        android:text="Adivinas"
-        tools:layout_editor_absoluteX="149dp"
-        tools:layout_editor_absoluteY="110dp" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <Button
-        android:id="@+id/button22"
-        android:layout_width="178dp"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/jueguitos"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/button"
-        android:layout_alignTop="@+id/button"
-        android:layout_alignEnd="@+id/button"
-        android:layout_alignBottom="@+id/button"
-        android:layout_marginStart="-57dp"
-        android:layout_marginTop="181dp"
-        android:layout_marginEnd="7dp"
-        android:layout_marginBottom="-173dp"
-        android:text="Ahorcado" />
+        android:orientation="horizontal"
+        android:layout_centerVertical="true"
+        >
+
+    </androidx.recyclerview.widget.RecyclerView>
+
 </RelativeLayout>
